--- a/_modules/evmspec/structs/block.html
+++ b/_modules/evmspec/structs/block.html
@@ -169,7 +169,7 @@
 
                 <span class="n">transactions</span> <span class="o">=</span> <span class="p">[</span>
                     <span class="n">better_decode</span><span class="p">(</span>
-                        <span class="n">raw_tx</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Transaction</span><span class="p">],</span> <span class="n">dec_hook</span><span class="o">=</span><span class="n">_decode_hook</span>
+                        <span class="n">raw_tx</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Transaction</span><span class="p">],</span> <span class="n">dec_hook</span><span class="o">=</span><span class="n">_decode_hook</span>  <span class="c1"># type: ignore [arg-type]</span>
                     <span class="p">)</span>
                     <span class="k">for</span> <span class="n">raw_tx</span> <span class="ow">in</span> <span class="n">json</span><span class="o">.</span><span class="n">decode</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_transactions</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="n">Tuple</span><span class="p">[</span><span class="n">Raw</span><span class="p">,</span> <span class="o">...</span><span class="p">])</span>
                 <span class="p">]</span>
