--- a/_modules/evmspec/data/_main.html
+++ b/_modules/evmspec/data/_main.html
@@ -115,6 +115,12 @@
 <span class="c1"># due to a circ import issue we will import this later</span>
 <span class="n">_decode_logs</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="n">Tuple</span><span class="p">[</span><span class="s2">&quot;Log&quot;</span><span class="p">,</span> <span class="o">...</span><span class="p">]]]</span> <span class="o">=</span> <span class="kc">None</span>
 
+<span class="c1"># If you have dank mids installed, evmspec gets some extra functionality</span>
+<span class="c1"># To prevent a circ import issue, we will fill these in later too</span>
+<span class="n">_dank_import_attempted</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
+<span class="n">_get_transaction_receipt</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Callable</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+<span class="n">_get_transaction_receipt_raw</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Callable</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+
 
 <div class="viewcode-block" id="Address"><a class="viewcode-back" href="../../../source/evmspec.data.html#evmspec.data.uints.Address">[docs]</a><span class="k">class</span><span class="w"> </span><span class="nc">Address</span><span class="p">(</span><span class="nb">str</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
@@ -565,7 +571,7 @@
             <span class="bp">self</span><span class="p">,</span>
             <span class="n">decode_to</span><span class="p">:</span> <span class="n">ReceiptDataType</span><span class="p">,</span>
             <span class="n">decode_hook</span><span class="p">:</span> <span class="n">DecodeHook</span><span class="p">[</span><span class="n">ReceiptDataType</span><span class="p">]</span> <span class="o">=</span> <span class="n">_decode_hook</span><span class="p">,</span>
-        <span class="p">)</span> <span class="o">-&gt;</span> <span class="s2">&quot;TransactionReceipt&quot;</span><span class="p">:</span>
+        <span class="p">)</span> <span class="o">-&gt;</span> <span class="s2">&quot;TransactionReceipt&quot;</span><span class="p">:</span>  <span class="c1"># sourcery skip: hoist-if-from-if</span>
 <span class="w">            </span><span class="sd">&quot;&quot;&quot;Async method to get the transaction receipt.</span>
 
 <span class="sd">            Args:</span>
@@ -583,14 +589,21 @@
 <span class="sd">                &gt;&gt;&gt; await tx_hash.get_receipt(TransactionReceipt)</span>
 <span class="sd">                # Returns a TransactionReceipt object</span>
 <span class="sd">            &quot;&quot;&quot;</span>
-            <span class="kn">import</span><span class="w"> </span><span class="nn">dank_mids</span>
+            <span class="k">if</span> <span class="n">_get_transaction_receipt</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+                <span class="k">if</span> <span class="ow">not</span> <span class="n">_dank_import_attempted</span><span class="p">:</span>
+                    <span class="n">__import_dank_tx_methods</span><span class="p">()</span>
+                <span class="k">if</span> <span class="n">_get_transaction_receipt</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+                    <span class="k">raise</span> <span class="ne">ModuleNotFoundError</span><span class="p">(</span>
+                        <span class="s2">&quot;You must have dank_mids installed in order to use this feature&quot;</span>
+                    <span class="p">)</span> <span class="kn">from</span><span class="w"> </span><span class="kc">None</span>
 
-            <span class="k">return</span> <span class="k">await</span> <span class="n">dank_mids</span><span class="o">.</span><span class="n">eth</span><span class="o">.</span><span class="n">get_transaction_receipt</span><span class="p">(</span>
+            <span class="k">return</span> <span class="k">await</span> <span class="n">_get_transaction_receipt</span><span class="p">(</span>
                 <span class="bp">self</span><span class="p">,</span> <span class="n">decode_to</span><span class="o">=</span><span class="n">decode_to</span><span class="p">,</span> <span class="n">decode_hook</span><span class="o">=</span><span class="n">decode_hook</span>  <span class="c1"># type: ignore [arg-type]</span>
             <span class="p">)</span>
 
         <span class="nd">@a_sync</span>  <span class="c1"># TODO; compare how these type check, they both function the same</span>
         <span class="k">async</span> <span class="k">def</span><span class="w"> </span><span class="nf">get_logs</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="s2">&quot;Log&quot;</span><span class="p">,</span> <span class="o">...</span><span class="p">]:</span>
+            <span class="c1"># sourcery skip: hoist-if-from-if</span>
 <span class="w">            </span><span class="sd">&quot;&quot;&quot;Async method to get the logs for the transaction.</span>
 
 <span class="sd">            Returns:</span>
@@ -604,17 +617,18 @@
 <span class="sd">                &gt;&gt;&gt; await tx_hash.get_logs()</span>
 <span class="sd">                # Returns a tuple of Log objects</span>
 <span class="sd">            &quot;&quot;&quot;</span>
-            <span class="k">try</span><span class="p">:</span>
-                <span class="kn">import</span><span class="w"> </span><span class="nn">dank_mids</span>
-            <span class="k">except</span> <span class="ne">ImportError</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
-                <span class="k">raise</span> <span class="ne">ImportError</span><span class="p">(</span>
-                    <span class="s2">&quot;You must have dank_mids installed in order to use this feature&quot;</span>
-                <span class="p">)</span> <span class="kn">from</span><span class="w"> </span><span class="nn">e.__cause__</span>
+            <span class="k">if</span> <span class="n">_get_transaction_receipt_raw</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+                <span class="k">if</span> <span class="ow">not</span> <span class="n">_dank_import_attempted</span><span class="p">:</span>
+                    <span class="n">__import_dank_tx_methods</span><span class="p">()</span>
+                <span class="k">if</span> <span class="n">_get_transaction_receipt_raw</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+                    <span class="k">raise</span> <span class="ne">ModuleNotFoundError</span><span class="p">(</span>
+                        <span class="s2">&quot;You must have dank_mids installed in order to use this feature&quot;</span>
+                    <span class="p">)</span> <span class="kn">from</span><span class="w"> </span><span class="kc">None</span>
 
             <span class="k">if</span> <span class="n">_decode_logs</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="n">__make_decode_logs</span><span class="p">()</span>
-            <span class="n">receipt</span> <span class="o">=</span> <span class="k">await</span> <span class="n">dank_mids</span><span class="o">.</span><span class="n">eth</span><span class="o">.</span><span class="n">_get_transaction_receipt_raw</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span>
-            <span class="k">return</span> <span class="n">_decode_logs</span><span class="p">(</span><span class="n">receipt</span><span class="p">)</span>  <span class="c1"># type: ignore [misc]</span></div>
+
+            <span class="k">return</span> <span class="n">_decode_logs</span><span class="p">(</span><span class="k">await</span> <span class="n">_get_transaction_receipt_raw</span><span class="p">(</span><span class="bp">self</span><span class="p">))</span>  <span class="c1"># type: ignore [misc]</span></div>
 
 
 <div class="viewcode-block" id="BlockHash"><a class="viewcode-back" href="../../../source/evmspec.data.html#evmspec.data.uints.BlockHash">[docs]</a><span class="nd">@final</span>
@@ -630,6 +644,21 @@
 
     <span class="k">global</span> <span class="n">_decode_logs</span>
     <span class="n">_decode_logs</span> <span class="o">=</span> <span class="n">Decoder</span><span class="p">(</span><span class="nb">type</span><span class="o">=</span><span class="n">Tuple</span><span class="p">[</span><span class="s2">&quot;Log&quot;</span><span class="p">,</span> <span class="o">...</span><span class="p">],</span> <span class="n">dec_hook</span><span class="o">=</span><span class="n">_decode_hook</span><span class="p">)</span><span class="o">.</span><span class="n">decode</span>
+
+
+<span class="k">def</span><span class="w"> </span><span class="nf">__import_dank_tx_methods</span><span class="p">()</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Just a helper function to break a circular import&quot;&quot;&quot;</span>
+    <span class="k">global</span> <span class="n">_dank_import_attempted</span>
+    <span class="k">global</span> <span class="n">_get_transaction_receipt</span>
+    <span class="k">global</span> <span class="n">_get_transaction_receipt_raw</span>
+
+    <span class="k">try</span><span class="p">:</span>
+        <span class="kn">from</span><span class="w"> </span><span class="nn">dank_mids</span><span class="w"> </span><span class="kn">import</span> <span class="n">dank_eth</span>
+    <span class="k">except</span> <span class="ne">ImportError</span><span class="p">:</span>
+        <span class="n">_dank_import_attempted</span> <span class="o">=</span> <span class="kc">True</span>
+    <span class="k">else</span><span class="p">:</span>
+        <span class="n">_get_transaction_receipt</span> <span class="o">=</span> <span class="n">dank_eth</span><span class="o">.</span><span class="n">get_transaction_receipt</span>
+        <span class="n">_get_transaction_receipt_raw</span> <span class="o">=</span> <span class="n">dank_eth</span><span class="o">.</span><span class="n">_get_transaction_receipt_raw</span>
 </pre></div>
 
            </div>
