--- a/_modules/evmspec/data/_main.html
+++ b/_modules/evmspec/data/_main.html
@@ -201,6 +201,7 @@
 
 <div class="viewcode-block" id="Address.checksum"><a class="viewcode-back" href="../../../source/evmspec.data.html#evmspec.data.uints.Address.checksum">[docs]</a>    <span class="nd">@classmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">checksum</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">address</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Self</span><span class="p">:</span>
+        <span class="c1"># sourcery skip: use-contextlib-suppress</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Returns the checksummed version of the address.</span>
 
 <span class="sd">        This function takes a hex address and returns it in the checksummed format</span>
@@ -385,6 +386,7 @@
 
 
 <span class="k">def</span><span class="w"> </span><span class="nf">_decode_hook</span><span class="p">(</span><span class="n">typ</span><span class="p">:</span> <span class="n">Type</span><span class="p">[</span><span class="n">_T</span><span class="p">],</span> <span class="n">obj</span><span class="p">:</span> <span class="nb">object</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">_T</span><span class="p">:</span>
+    <span class="c1"># sourcery skip: assign-if-exp</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;A generic decode hook for converting objects to specific types.</span>
 
 <span class="sd">    Args:</span>
@@ -423,6 +425,7 @@
 
 
 <span class="k">def</span><span class="w"> </span><span class="nf">_decode_hook_unsafe</span><span class="p">(</span><span class="n">typ</span><span class="p">:</span> <span class="n">Type</span><span class="p">[</span><span class="n">_T</span><span class="p">],</span> <span class="n">obj</span><span class="p">:</span> <span class="nb">object</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">_T</span><span class="p">:</span>
+    <span class="c1"># sourcery skip: assign-if-exp</span>
     <span class="k">if</span> <span class="nb">issubclass</span><span class="p">(</span><span class="n">typ</span><span class="p">,</span> <span class="p">(</span><span class="n">HexBytes</span><span class="p">,</span> <span class="n">Enum</span><span class="p">,</span> <span class="n">Decimal</span><span class="p">)):</span>
         <span class="k">return</span> <span class="n">typ</span><span class="p">(</span><span class="n">obj</span><span class="p">)</span>  <span class="c1"># type: ignore [arg-type, return-value]</span>
     <span class="k">elif</span> <span class="n">typ</span> <span class="ow">is</span> <span class="n">Address</span><span class="p">:</span>
