deploy: 13bf366a5e73c45bccf8632fc734e85562704781

--- a/_modules/evmspec/structs/block.html
+++ b/_modules/evmspec/structs/block.html
@@ -276,7 +276,7 @@
 <span class="sd">        - :class:`MinedBlock`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="n">baseFeePerGas</span><span class="p">:</span> <span class="n">Wei</span>
+    <span class="n">baseFeePerGas</span><span class="p">:</span> <span class="n">Wei</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The base fee per gas.&quot;&quot;&quot;</span></div>
 
 
